# nav-diff-robot

./: README.md
drivers/: dio.cpp  dio.hpp  light_tower.cpp  light_tower.hpp  parsec.cpp  parsec.hpp  parsec_usb.cpp  parsec_usb.hpp  titan.cpp  titan.hpp
drivers/examples/light_tower_example/: light_tower_example.cpp
drivers/examples/parsec_example/: parsec_example.cpp
drivers/examples/titan_encoder_example/: Makefile  titan_encoder_example.cpp
nav2_params/: nav2_params.yaml
scripts/: setup_permissions.sh
src/robot_control/: CMakeLists.txt  package.xml
src/robot_control/config/: params.yaml
src/robot_control/include/robot_control/controller/: controller.hpp
src/robot_control/include/robot_control/kinematics/: differential_kinematics.hpp
src/robot_control/include/robot_control/odometry/: odometry.hpp
src/robot_control/launch/: control.launch.py
src/robot_control/src/: main.cpp
src/robot_control/src/controller/: controller.cpp
src/robot_control/src/kinematics/: differential_kinematics.cpp
src/robot_control/src/odometry/: odometry.cpp
src/robot_control/srv/: GetEncoder.srv  Pid.srv  SetSpeed.srv
src/robot_core/: CMakeLists.txt  package.xml
src/robot_core/config/: params.yaml
src/robot_core/launch/: avoidance.launch.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/config/: controllers.yaml
src/robot_description/launch/: robot_description.launch.py
src/robot_description/urdf/: base_link.xacro  constants.xacro  laser.xacro  manipulator.xacro  simple_robot.urdf.xacro  tmini_laser.xacro  wheel.xacro
src/robot_description/urdf/diff_terrain/: chassis.xacro  constants.xacro  gazebo_control.xacro  robot.urdf.xacro  ros2_control.xacro  wheel.xacro
src/robot_description/urdf/four_wheels/: chassis.xacro  constants.xacro  robot.urdf.xacro  ros2_control.xacro
src/robot_localization/: CMakeLists.txt  package.xml
src/robot_localization/action/: SensorCommand.action
src/robot_localization/include/robot_localization/: sensors.hpp
src/robot_localization/launch/: localization.launch.py
src/robot_localization/src/: main.cpp  sensors.cpp
src/robot_localization/srv/: GetAngle.srv  GetData.srv  SensorDriver.srv
src/robot_sim/: package.xml
src/robot_sim/launch/: sim.launch.py
src/robot_sim/world/: simple_world.world  wall.xacro  world.world  world.world.xacro
src/studica_control/: CMakeLists.txt  package.xml
src/studica_control/config/: params.yaml  params_template.yaml  ydlidar.yaml
src/studica_control/include/studica_control/: diff_drive_odometry.h  dio_component.hpp  gamepad_component.hpp  light_tower_component.hpp  omni_drive_component.h  omni_drive_odometry.h  parsec_component.hpp  power_component.hpp  servo_component.h  titan_component.h  titan_component.hpp
src/studica_control/launch/: lidar.launch.py  mapping_launch.py  studica_launch.py
src/studica_control/msg/: ParsecZoneMsg.msg
src/studica_control/src/: manual_composition.cpp
src/studica_control/src/components/: diff_drive_component.cpp  diff_drive_odometry.cpp  dio_component.cpp  gamepad_component.cpp  imu_component.cpp  light_tower_component.cpp  omni_drive_component.cpp  omni_drive_odometry.cpp  parsec_component.cpp  power_component.cpp  servo_component.cpp  sharp_component.cpp  titan_component.cpp  ultrasonic_component.cpp
src/studica_control/src/components/examples/cpp/: light_tower_example.cpp  parsec_example.cpp  titan_example.cpp
src/studica_control/src/components/examples/python/: light_tower_example.py  parsec_example.py  titan_example.py
src/studica_control/srv/: SetData.srv
src/utils/: CMakeLists.txt  package.xml
src/utils/include/utils/: UtilsGeneral.h
src/utils/srv/: Int32.srv
