<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="felipeferreira1310@hotmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_action</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- Run dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- TF -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Export action interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- PID -->
  <depend>control_toolbox</depend>

  <!-- UTILS -->
  <depend>utils</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
