<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>studica_control</name>
  <version>0.0.0</version>
  <description>
    TODO: Package description
  </description>

  <maintainer email="vmx@todo.todo">vmx</maintainer>

  <license>TODO: License declaration</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Action generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Core ROS 2 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>

  <!-- Messages -->
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!-- TF -->
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Optional but recommended -->
  <depend>ament_index_cpp</depend>

  <depend>utils</depend>

  <depend>robot_control</depend>
  <depend>robot_localization</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
